switched from rollup to webpack

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "prayertimes.js",
   "typings": "prayertimes.d.ts",
   "scripts": {
-    "build": "rollup -c",
+    "build": "webpack",
     "test": "jest",
     "coverage": "jest --coverage",
     "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls"
@@ -24,14 +24,14 @@
   },
   "homepage": "https://github.com/doniseferi/prayertimes#readme",
   "devDependencies": {
-    "@rollup/plugin-typescript": "^2.1.0",
     "@types/jest": "^24.9.0",
     "coveralls": "^3.0.9",
     "jest": "^24.9.0",
-    "rollup": "^1.29.0",
-    "rollup-plugin-terser": "^5.2.0",
     "ts-jest": "^24.3.0",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.5"
-  }
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {}
 }
