--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ after_success: npm run coverage
 
 deploy:
   provider: npm
+  email : $NPM_EMAIL
   api_token: $NPM_TOKEN
   edge: true
   access: public
