--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "request": "launch",
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}\\prayertimes.js"
+      "program": "${workspaceFolder}\\salahtimes.js"
     },
     {
       "type": "node",
