--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ os: linux
 node_js:
   - "lts/*"
 
-after_success: npm run coverage
+after_success: 
+  npm run coverage
+  npm publish --dry-run
 
 deploy:
   provider: npm
