--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ node_js:
 after_success: 
   npm publish --dry-run
 
+before_deploy: 
+  - npm run build
+  - npm publish --dry-run
+  - ls -la
+
 deploy:
   provider: npm
   email : $NPM_EMAIL
