--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,11 @@ node_js:
   - "lts/*"
 
 after_success: 
-  - npm run build
-  - npm publish --dry-run
-  - ls -la
+  - npm run coverage
 
 before_deploy: 
   - npm run build
-  - npm publish --dry-run
-  - ls -la
+
 
 deploy:
   provider: npm
