--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "postversion": "git push && git push --tags",
     "build": "webpack",
     "test": "jest",
+    "build-docs": "npm run generate-docs && npm run merge-docs",
+    "merge-docs": "concat-md --ignore LICENSE.md --toc --decrease-title-levels --file-name-as-title --dir-name-as-title temp-docs > README.md",
+    "generate-docs": "typedoc --plugin typedoc-plugin-markdown --theme markdown --mode file --out temp-docs",
     "coverage": "jest --coverage",
     "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls"
   },
@@ -28,10 +31,13 @@
   "homepage": "https://github.com/doniseferi/salahtimes#readme",
   "devDependencies": {
     "@types/jest": "^24.9.0",
+    "concat-md": "^0.3.2",
     "coveralls": "^3.0.9",
     "jest": "^24.9.0",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
+    "typedoc": "^0.16.9",
+    "typedoc-plugin-markdown": "^2.2.16",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
