--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "A tiny library to get the islamic prayer times in utc for any given day and location.",
   "main": "salahtimes.js",
   "scripts": {
+    "cleandocs": "rimraf README.md && rimraf docs && rimraf temp-docs rim-raf",
     "preversion": "npm test",
     "version": "npm run build",
     "postversion": "git push && git push --tags",
-    "build": "webpack && npm run build-docs",
+    "build": "webpack && npm run builddocs",
     "test": "jest",
-    "build-docs": "npm run generate-docs && npm run merge-docs",
-    "merge-docs": "concat-md --ignore LICENSE.md --toc --decrease-title-levels --file-name-as-title --dir-name-as-title temp-docs > README.md",
-    "generate-docs": "typedoc --plugin typedoc-plugin-markdown --theme markdown --mode file --out temp-docs",
+    "builddocs": "npm run cleandocs && npm run generatedocs && npm run mergedocs",
+    "mergedocs": "concat-md --ignore LICENSE.md --toc --decrease-title-levels --file-name-as-title --dir-name-as-title temp-docs > README.md",
+    "generatedocs": "typedoc --plugin typedoc-plugin-markdown --theme markdown --mode file --out temp-docs --excludeExternals --excludeNotExported --excludePrivate --excludeProtected",
     "coverage": "jest --coverage",
     "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls"
   },
@@ -34,10 +35,12 @@
     "concat-md": "^0.3.2",
     "coveralls": "^3.0.9",
     "jest": "^24.9.0",
+    "rimraf": "^3.0.1",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
     "typedoc": "^0.16.9",
     "typedoc-plugin-markdown": "^2.2.16",
+    "typedoc-webpack-plugin": "^1.1.4",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
