--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "A tiny library to get the islamic prayer times in utc for any given day and location.",
   "main": "salahtimes.js",
   "scripts": {
+    "clean-docs": "rimraf docs",
     "preversion": "npm test",
     "version": "npm run build",
     "postversion": "git push && git push --tags",
-    "build": "webpack",
+    "build": "webpack && npm run build-docs",
     "test": "jest",
+    "build-docs": "npm run clean-docs && npm run generate-docs",
+    "generate-docs": "typedoc --listInvalidSymbolLinks --includeDeclarations --mode file --out docs --readme none --excludeExternals --excludeNotExported --excludePrivate --excludeProtected --ignoreCompilerErrors --plugin typedoc-plugin-markdown --theme markdown",
     "coverage": "jest --coverage",
     "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls"
   },
@@ -30,8 +33,11 @@
     "@types/jest": "^24.9.0",
     "coveralls": "^3.0.9",
     "jest": "^24.9.0",
+    "rimraf": "^3.0.1",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
+    "typedoc": "^0.16.9",
+    "typedoc-plugin-markdown": "^2.2.16",
     "typescript": "^3.7.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
