--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "jest",
     "build-docs": "npm run clean-docs && npm run generate-docs",
     "generate-docs": "typedoc --listInvalidSymbolLinks --includeDeclarations --mode file --out docs --readme none --excludeExternals --excludeNotExported --excludePrivate --excludeProtected --ignoreCompilerErrors --plugin typedoc-plugin-markdown --theme markdown",
-    "coverage": "jest --coverage",
-    "coveralls": "jest --coverage && cat ./tests/coverage/lcov.info | coveralls"
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
