--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,8 @@ env:
   es6: true
   node: true
 extends:
-  - standard
+  - standard-with-typescript
+  - plugin:jest/recommended
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
@@ -11,6 +12,9 @@ parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
+  project: 'tsconfig.json'
+  createDefaultProgram: true
 plugins:
   - '@typescript-eslint'
+  - 'jest'
 rules: {}
