--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "salahtimes.js",
   "scripts": {
     "lint": "eslint ./src/** --ext .html,.md,./lib",
-    "lint-fix": "eslint ./src/** --ext .html,.md,./lib --fix",
+    "fix":"eslint ./src/** --ext .html,.md,./lib --fix",
     "clean-docs": "rimraf docs",
     "preversion": "npm test",
     "version": "npm run build",
