--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,6 +22,6 @@ rules: {
   "@typescript-eslint/restrict-template-expressions": ["error", {
       "allowNumber": true,
       "allowBoolean": false,
-      "allowNullable": false
+      "allowNullable": true
     }]
 }
