--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "salahtimes.js",
   "scripts": {
     "lint": "eslint ./src/** --ext .html,.md,./lib",
-    "fix":"eslint ./src/** --ext .html,.md,./lib --fix",
+    "fix": "eslint ./src/** --ext .html,.md,./lib --fix",
     "clean-docs": "rimraf docs",
     "preversion": "npm test",
     "version": "npm run build",
@@ -44,7 +44,7 @@
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
+    "jest": "^25.1.0",
     "rimraf": "^3.0.1",
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.2.1",
@@ -54,5 +54,7 @@
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "suntimes": "^4.1.5"
+  }
 }
