--- a/package.json
+++ b/package.json
@@ -33,12 +33,11 @@
   },
   "homepage": "https://github.com/doniseferi/salahtimes#readme",
   "devDependencies": {
-    "@types/jest": "^24.9.0",
+    "@types/jest": "^26.0.7",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "coveralls": "^3.0.11",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-with-typescript": "^14.0.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^23.8.2",
@@ -47,15 +46,13 @@
     "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.3.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^24.3.0",
+    "ts-jest": "^26.1.3",
     "ts-loader": "^6.2.2",
     "typedoc": "^0.16.11",
-    "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^4.42.1"
   },
   "dependencies": {
-    "suntimes": "^6.0.1"
+    "suntimes": "^6.0.2"
   }
 }
