--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "ts-jest": "^26.1.3",
     "ts-loader": "^6.2.2",
     "typedoc": "^0.16.11",
+    "typedoc-plugin-markdown": "^2.4.0",
     "typescript": "^3.8.3",
-    "webpack": "^4.42.1"
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "suntimes": "^6.0.2"
